# dicom-mcp

./: .env.example  .gitignore  CERTIFICATES.md  CURSOR_SETUP.md  FHIR_SERVERS.md  INTEGRATE_UI_COMPONENTS.md  LICENSE  MCP_NAMING_SCHEME.md  MCP_UI_COMPONENTS_GUIDE.md  ORCHESTRATION.md  README.md  TESTING_GUIDE.md  cert-key-combined.pem  cert.pem  configuration.yaml  conftest.py  dicom.py  dicom_servers.yaml.bak  dicom_servers.yaml.example  docker-compose.yaml  key.pem  main.py  mcp-config.example.json  pyproject.toml  start_web_ui.py  system_prompt.txt  test_env_setup.py
.github/workflows/: release.yml
.orthanc/: docker-compose.yaml  orthanc.json
dicom-mwl-mpps/: .gitignore  LICENSE  Makefile  README.md  config.py  docker-compose.override.yml  docker-compose.yml
dicom-mwl-mpps/mysql-init/: dicom_tags_short_names.sql  orthanc_ris.sql
examples/: Configuration.json  StoneViewer.json  openai_dicom_example.py
mysql/: mini_ris.sql
orthanc/: orthanc.configuration.json  orthanc2.configuration.json
resources/: manifest.yaml
src/: __init__.py  attributes.py  config.py  resources.py  server.py  tools.py  utils.py
src/dicom_mcp/: __main__.py  config.py  dicom_api.py  dicom_client.py  fhir_client.py  mysql_client.py  openai_chat.py  openai_client.py  (+7 more)
tests/: FHIR_SERVERS.md  README.md  docker-compose-fhir.yaml  docker-compose.yaml  init-postgres.sql  orthanc.configuration.json  orthanc2.configuration.json  populate_synthetic_fhir_data.py  sample-reports.md  synthetic-pet-ct-reports.md  test.py  test_dicom_mcp.py  test_dicom_move.py  test_dicom_pdf.py  test_dicom_servers.yaml
(+20 files in other folders)
