[project]
name = "dicom-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.3.0",
    "pynetdicom>=2.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "requests>=2.31.0",
    "pydicom>=2.4.0",
    "pytest-cov>=6.0.0"
]